Fix names of authors

--- a/doc/inc/static/bibliography.bib
+++ b/doc/inc/static/bibliography.bib
@@ -409,11 +409,11 @@ Die Demoszene ist im Wesentlichen auf Europa beschränkt; in den USA und in Asie
 	pages = {623--629}
 }
 
-@misc{brian_danchilla_beginning_2014,
+@misc{danchilla_beginning_2014,
 	title = {Beginning {WebGL} - {Chapter} 4 {Examples}},
 	url = {http://www.beginningwebgl.com/examples/chapter-4},
 	urldate = {2016-01-11},
-	author = {{Brian Danchilla}},
+	author = {Danchilla, Brian},
 	month = oct,
 	year = {2014},
 	file = {Beginning WebGL - Chapter 4 Examples:/home/so/.zotero/zotero/d79e17nl.default/zotero/storage/7QXT394V/chapter-4.html:text/html}
@@ -449,10 +449,10 @@ Umgebungsverdeckung wird zusätzlich zum herkömmlichen Shading mit Phong Shadin
 	file = {Snapshot:/home/so/.zotero/zotero/d79e17nl.default/zotero/storage/DNP8NXA2/index.html:text/html}
 }
 
-@misc{timothy_lottes_fxaa_2009,
+@misc{lottes_fxaa_2009,
 	title = {{FXAA}},
 	publisher = {NVidia},
-	author = {{Timothy Lottes}},
+	author = {Lottes, Timothy},
 	year = {2009}
 }
 
@@ -497,16 +497,16 @@ Approximierung durch analytische Funktionen (lokale Beleuchtungsmodelle).},
 	file = {Snapshot:/home/so/.zotero/zotero/d79e17nl.default/zotero/storage/RNGDCFFM/index.html:text/html}
 }
 
-@misc{brent_burley_physicall-based_2012,
+@misc{burley_physicall-based_2012,
 	title = {Physicall-{Based} {Shading} at {Disney}},
 	language = {en},
 	publisher = {Walt Disney Animation Studios},
-	author = {{Brent Burley}},
+	author = {Burley, Brent},
 	month = aug,
 	year = {2012}
 }
 
-@misc{benjamin_keiner_enhanced_2014,
+@misc{keiner_enhanced_2014,
 	title = {Enhanced {Sphere} {Tracing}},
 	abstract = {In this paper we present several performance and quality enhancements to classical sphere tracing: First, we
 propose a safe, over-relaxation-based method for accelerating sphere tracing. Second, a method for dynamically
@@ -520,7 +520,7 @@ method. The methods presented in this paper have more universal applicability be
 generated scenes in real-time and can also be combined with path-tracing-based global illumination solutions.},
 	language = {en},
 	publisher = {The Eurographics Association},
-	author = {{Benjamin Keiner} and {Henry Schäfer} and {Johann Korndörfer} and {Urs Ganse} and {Marc Stamminger}},
+	author = {Keiner, Benjamin and Schäfer, Henry and Korndörfer, Johann and Ganse, Urs and Stamminger, Marc},
 	year = {2014}
 }
 
