Fix names of authors

--- a/doc/inc/80_conclusion.tex
+++ b/doc/inc/80_conclusion.tex
@@ -77,7 +77,7 @@ können.''~\parencite{wikipedia_the_free_encyclopedia_umgebungsverdeckung_2015}
 Arbeit~\citetitle{evans_fast_2006} interessante Ansätze, wie die
 Umgebungsverdeckung auf Distanzfelder angewendet werden kann. Dies kann
 so wohl mit relativ wenig Aufwand auch für Sphere Tracing angewendet
-werden.
+werden~\parencite{evans_fast_2006}.
 
 \subsection{Kantenglättung}
 \label{subsec:further_work:antialiasing}
@@ -91,13 +91,13 @@ bereits Verfahren zur Kantenglättung vor. Diese verkomplizieren jedoch
 den Rendering-Prozess und haben schwächen im Umgang mit angenäherten
 Obergrenzen von impliziten Oberflächen
 
-\citeauthor{timothy_lottes_fxaa_2009} schlägt in seiner
-Arbeit~\citetitle{timothy_lottes_fxaa_2009} eine einfache Lösung dieser
+\citeauthor{lottes_fxaa_2009} schlägt in seiner
+Arbeit~\citetitle{lottes_fxaa_2009} eine einfache Lösung dieser
 Problematiken vor. Es handelt sich dabei um ein Einpass
 Filter, welcher typischerweise in der Nachbearbeitung zum Einsatz kommt.
 Der Filter wird auf das gerenderte Bild (bzw.\ auf einen Bildpuffer)
 angewendet. Es handelt sich dabei um ein Verfahren, welches auf der
-Detektion von Kanten basiert.
+Detektion von Kanten basiert~\parencite{lottes_fxaa_2009}.
 
 \subsection{Realistische Materialien}
 \label{subsec:further_work:brdf}
@@ -122,22 +122,22 @@ Verallgemeinerung der BRDF auf Texturen stellt die BTF (Bidirectional
 Texturing Function)
 dar.''~\parencite{wikipedia_the_free_encyclopedia_bidirektionale_2014}
 
-\citeauthor{brent_burley_physicall-based_2012} liefert
-mit~\citetitle{brent_burley_physicall-based_2012} eine gute Übersicht,
-wie solche Verfahren umgesetzt werden können.
+\citeauthor{burley_physicall-based_2012} liefert
+mit~\citetitle{burley_physicall-based_2012} eine gute Übersicht,
+wie solche Verfahren umgesetzt werden
+können~\parencite{burley_physicall-based_2012}.
 \citeauthor{bagher_accurate_2012} bietet
 in~\citetitle{bagher_accurate_2012} eine Fülle an Materialien und
-Eigenschaften.
+Eigenschaften~\parencite{bagher_accurate_2012}.
 
 \subsection{Optimierungsverfahren}
 \label{subsec:further_work:optimisation}
 
-Um das Sphere Tracing Verfahren noch zu beschleunigen, existieren
-diverse Verfahren. So stellen
-z.B.~\citeauthor{benjamin_keiner_enhanced_2014}
-in~\citetitle{benjamin_keiner_enhanced_2014} diverse Methoden zur
+Zur Beschleunigung das Sphere Tracing Verfahrens existieren diverse
+Verfahren. So stellen z.B.~\citeauthor{keinert_enhanced_2014}
+in~\citetitle{keinert_enhanced_2014} diverse Methoden zur
 Optimierung und Beschleunigung des Renderings sowie Methoden zum Finden
-von Schnittpunkten vor.~\citeauthor{seven_rendering_2012} stellt
+von Schnittpunkten vor~\parencite{keinert_enhanced_2014}.~\citeauthor{seven_rendering_2012} stellt
 in~\citetitle{seven_rendering_2012} eine Methode vor, wie Sphere Tracing
 mittels Aussenden von Kegelförmigen (Primär-) Strahlen optimiert werden
-kann.
+kann~\parencite{seven_rendering_2012}.
