--- a/doc/inc/static/bibliography.bib
+++ b/doc/inc/static/bibliography.bib
@@ -506,7 +506,7 @@ Approximierung durch analytische Funktionen (lokale Beleuchtungsmodelle).},
 	year = {2012}
 }
 
-@misc{keiner_enhanced_2014,
+@misc{keinert_enhanced_2014,
 	title = {Enhanced {Sphere} {Tracing}},
 	abstract = {In this paper we present several performance and quality enhancements to classical sphere tracing: First, we
 propose a safe, over-relaxation-based method for accelerating sphere tracing. Second, a method for dynamically
@@ -520,7 +520,7 @@ method. The methods presented in this paper have more universal applicability be
 generated scenes in real-time and can also be combined with path-tracing-based global illumination solutions.},
 	language = {en},
 	publisher = {The Eurographics Association},
-	author = {Keiner, Benjamin and Schäfer, Henry and Korndörfer, Johann and Ganse, Urs and Stamminger, Marc},
+	author = {Keinert, Benjamin and Schäfer, Henry and Korndörfer, Johann and Ganse, Urs and Stamminger, Marc},
 	year = {2014}
 }
 
