--- a/doc/inc/static/versions.tex
+++ b/doc/inc/static/versions.tex
@@ -134,9 +134,12 @@
         und Nachführen von verbleibenden TODO-Noitzen, Nachführen der
         Versionshistorie
     }
-    \vhEntry{1.0}{1.01.2016}{SO}{Überarbeitung der Dokumentation bis und
-        mit
-        Kapitel~\ref{chap:theoretical_background}~\nameref{chap:theoretical_background},
-        Nachführen der Versionshistorie
+    \vhEntry{1.0}{11.01.2016}{SO}{Überarbeitung der Dokumentation bis
+        und mit~\autoref{chap:theoretical_background}, Nachführen der
+        Versionshistorie
+    }
+    \vhEntry{1.1}{13.01.2016}{SO}{Überarbeitung der Dokumentation
+        ab~\autoref{chap:theoretical_background}, Nachführen der
+        Versionshistorie
     }
 \end{versionhistory}
