Rename management summary to abstract, add abstract

--- a/doc/mte7101.tex
+++ b/doc/mte7101.tex
@@ -244,8 +244,8 @@
 \include{inc/static/title}
 \include{inc/static/versions}
 \listoftodos{}
-\addcontentsline{toc}{chapter}{Management Summary}
-\include{inc/static/management_summary}
+\addcontentsline{toc}{chapter}{Abstract}
+\include{inc/static/abstract}
 %---------------------------------------------------------------------------
 
 % Table of contents
