Update version history

--- a/doc/inc/static/versions.tex
+++ b/doc/inc/static/versions.tex
@@ -126,20 +126,26 @@
         der Beschreibung und Referenz von impliziten Oberflächen in
         Kpaitel~\ref{subsec:implicit_surfaces}, Erarbeiten des
         Fazits~\ref{chap:discussion_and_conclusion}, Beschreibung der
-        Aufgabenstellung~\ref{chap:scope}
+        Aufgabenstellung~\ref{chap:scope}.
     }
     \vhEntry{0.25}{10.01.2016}{SO}{Fertigstellung der
         Kapitel~\ref{chap:scope}~\nameref{chap:scope}
         und~\ref{chap:procedure}~\nameref{chap:procedure}, Abarbeiten
         und Nachführen von verbleibenden TODO-Noitzen, Nachführen der
-        Versionshistorie
+        Versionshistorie.
     }
-    \vhEntry{1.0}{11.01.2016}{SO}{Überarbeitung der Dokumentation bis
+    \vhEntry{0.90}{11.01.2016}{SO}{Überarbeitung der Dokumentation bis
         und mit~\autoref{chap:theoretical_background}, Nachführen der
-        Versionshistorie
+        Versionshistorie.
     }
-    \vhEntry{1.1}{13.01.2016}{SO}{Überarbeitung der Dokumentation
-        ab~\autoref{chap:theoretical_background}, Nachführen der
-        Versionshistorie
+    \vhEntry{0.91}{13.01.2016}{SO}{Überarbeitung der Dokumentation
+        ab~\autoref{chap:theoretical_background}, Verfassen
+        von~\autoref{sec:further_work}~\nameref{sec:further_work},
+        Nachführen der Versionshistorie.
+    }
+    \vhEntry{1.0}{13.01.2016}{SO}{Überarbeitung
+        von~\autoref{chap:discussion_and_conclusion}~\nameref{chap:discussion_and_conclusion},
+        Verfassen von~\autoref{chap:abstract}\nameref{chap:abstract},
+        Nachführen der Versionshistorie.
     }
 \end{versionhistory}
