--- a/doc/mte7101.tex
+++ b/doc/mte7101.tex
@@ -243,7 +243,7 @@
 \setcounter{page}{1}
 \include{inc/static/title}
 \include{inc/static/versions}
-\listoftodos{}
+% \listoftodos{}
 \addcontentsline{toc}{chapter}{Abstract}
 \include{inc/static/abstract}
 %---------------------------------------------------------------------------
