--- a/doc/inc/20_administrative.tex
+++ b/doc/inc/20_administrative.tex
@@ -1,5 +1,6 @@
 % -*- coding: UTF-8 -*-
 % vim: autoindent expandtab tabstop=4 sw=4 sts=4 filetype=tex
+% vim: spelllang=de spell
 % chktex-file 27 - disable warning about missing include files
 
 \chapter{Administratives}
@@ -25,7 +26,7 @@ Bezeichnung: \= Name name name name name name\= Zuständigkeit \kill \\
 \section{Aufbau des Dokumentes}
 \label{sec:document_structure}
 
-Der Aufbau der vorliegenden Arbeit ist wie folgt:
+Die vorliegende Arbeit ist aufgebaut wie folgt:
 \begin{itemize}
     \item Einleitung zur Projektarbeit
     \item Beschreibung der Aufgabenstellung
@@ -47,7 +48,7 @@ Nachfolgend sind die abzugebenden Objekte aufgeführt:
         Das Abschlussdokument beinhaltet die theoretischen Grundlagen
         (unter praktischen Aspekten) des Volume Ray Casting Verfahrens.
     \item \textbf{Protoyp} \\
-        Der Prototyp, welcher im Rahmen der Bearbeitung der Thematik
-        entstanden ist. Es handelt sich um eine praktische Umsetzung des
-        vorgestellten Verfahrens.
+        Der Prototyp entstand im Rahmen der Bearbeitung der Thematik. Es
+        handelt sich um eine praktische Umsetzung des vorgestellten
+        Verfahrens.
 \end{itemize}
