--- a/doc/inc/30_scope.tex
+++ b/doc/inc/30_scope.tex
@@ -1,5 +1,6 @@
 % -*- coding: UTF-8 -*-
 % vim: autoindent expandtab tabstop=4 sw=4 sts=4 filetype=tex
+% vim: spelllang=de spell
 % chktex-file 27 - disable warning about missing include files
 
 \chapter{Aufgabenstellung}
@@ -11,7 +12,7 @@
 Seit der Entstehung der Computergrafik Ende der 1960-er Jahre möchte man
 möglichst realitätsnahe, echte Bilder generieren können. Angefangen mit
 \textit{Photon Tracing} (1968), über \textit{Ray Tracing} (1980), bis hin
-zu \textit{Photon Mapping} (1997/2001), haben sich immer realistischer
+zu \textit{Photon Mapping} (1997/2001), wurden immer realistischer
 wirkende Verfahren zur Darstellung von Bildern entwickelt.
 
 Da der Aufwand möglichst realistisch wirkende Bilder zu erzeugen jedoch
@@ -53,11 +54,11 @@ unterlegten
 Echtzeit-Animationen.''~\parencite{wikipedia_foundation_demoszene_2015}
 
 Es handelt sich bei der Demoszene um ein sehr aktives und kreatives
-Umfeld, in dem die Technologie ständig an die Grenzen des technisch
-machbaren gelangt. In diesem Umfeld entstehen regelmässig neue Ideen zur
-Erzeugung von noch realistischer wirkenden Bildern. Dabei findet eine
-wechselseitige Beeinflussung zwischen dem akademischen Umfeld und der
-Demoszene statt.
+Umfeld, in welchem die Technologie ständig an die Grenzen ihrer
+Möglichkeiten gebracht wird. In diesem Umfeld entstehen regelmässig neue
+Ideen zur Erzeugung von noch realistischer wirkenden Bildern. Dabei
+findet eine wechselseitige Beeinflussung zwischen dem akademischen
+Umfeld und der Demoszene statt.
 
 So wurde auch das hier vorgestellte \textit{Sphere Tracing} Verfahren
 relativ früh von in der Demoszene aktiven Personen aufgegriffen und
@@ -70,15 +71,16 @@ Diese Projektarbeit besteht aus drei Teilen. Der Beschreibung der
 theoretischen Grundlagen, der Beschreibung des als Sphere Tracing
 bekannten Verfahrens sowie der Umsetzung eines Prototypen.
 
-Für diese Projektarbeit liegt der Fokus vor allem auf der
-(mathematischen) Beschreibung von Oberflächen und der Nutzung dieser,
-sowie der Darstellung von Szenen mittels Sphere Tracing. Bei dem
-erstellten Prototypen handelt es sich um eine Art Machbarkeitsstudie,
-welche zeigt, dass Bilder mittels Sphere Tracing in Echtzeit erzeugt und
-dargestellt werden können.
+In dieser Projektarbeit liegt der Fokus vor allem auf der
+(mathematischen) Beschreibung und Anwendung von Oberflächen,
+sowie der Darstellung von Bildern mittels Sphere Tracing.
+
+Bei dem entwickelten Prototypen handelt es sich um eine Art
+Machbarkeitsstudie. Diese zeigt, dass Bilder mittels Sphere Tracing in
+Echtzeit erzeugt und dargestellt werden können.
 
 Diese Projektarbeit dient als Vorarbeit und Grundlage für das MSE-Modul
-\textit{MTE7102}.
+\textit{MTE7102} --- ``Vertiefungsprojekt 2'' (Folgemodul).
 
 \subsection{Vorgängige Aktivitäten}
 \label{subsec:preliminaries}
@@ -86,11 +88,11 @@ Diese Projektarbeit dient als Vorarbeit und Grundlage für das MSE-Modul
 Die Grundlagen dieser Projektarbeit waren dem Autor durch sein
 vorgängiges Studium an der Berner Fachhochschule mit
 Schwerpunkt~\textit{Computer Perception and Virtual Reality} bereits
-bekannt, jedoch nicht in dieser Tiefe.
+bekannt, jedoch nur partiell.
 
 Durch sein Interesse für die Demoszene wurde der Autor auf die Thematik
-dieser Arbeit aufmerksam, hatte sich aber zuvor nie eingehend damit
-auseinander gesetzt.
+dieser Arbeit aufmerksam. Zuvor hatte er sich nie eingehend damit
+beschäftigt.
 
 \subsection{Neue Lerninhalte}
 \label{subsec:new_learning_contents}
