--- a/doc/inc/40_procedure.tex
+++ b/doc/inc/40_procedure.tex
@@ -1,5 +1,6 @@
 % -*- coding: UTF-8 -*-
 % vim: autoindent expandtab tabstop=4 sw=4 sts=4 filetype=tex
+% vim: spelllang=de spell
 % chktex-file 27 - disable warning about missing include files
 
 \chapter{Vorgehen}
@@ -11,13 +12,11 @@
 \subsection{Regelmässige Treffen}
 \label{subsec:meetings}
 
-Regelmässige Besprechungen mit dem Betreuer der Arbeit halfen die
+Regelmässige Besprechungen mit dem Betreuer der Arbeit halfen, die
 gesteckten Ziele zu erreichen und Fehlentwicklungen zu vermeiden. Der
 Betreuer unterstützte den Autor dabei mit Vorschlägen. Die Treffen
-fanden mindestens alle zwei Wochen statt, sie wurden in Form eines
-Protokolles festgehalten. Das Protokoll findet sich in
-Abschnitt~\ref{chap:10_meeting_minutes} im Anhang dieser Arbeit
-(\ref{chap:attachment}).
+fanden zumeist alle zwei Wochen statt. Sie wurden in Form eines
+Protokolles festgehalten. Das Protokoll findet sich in~\autoref{chap:10_meeting_minutes}.
 
 \section{Projektphasen}
 \label{sec:project_schedule}
@@ -25,7 +24,8 @@ Abschnitt~\ref{chap:10_meeting_minutes} im Anhang dieser Arbeit
 \subsection{Meilensteine}
 \label{subsec:milestones}
 
-Um bei der Arbeit ein möglichst strukturiertes Vorgehen einzuhalten, wurden folgende Projektphasen gewählt:
+Um bei der Arbeit ein möglichst strukturiertes Vorgehen einzuhalten,
+wurden folgende Projektphasen gewählt:
 \begin{itemize}
     \item Start der Projektarbeit
     \item Erarbeitung und Festhalten der Anforderungen
@@ -71,24 +71,24 @@ anderen Phasen ein.
 \subsubsection{Projektstart}
 \label{subsubsec:kick_off}
 
-In der ersten Phase wurden die Meilensteine der Arbeit identifiziert und
-skizziert. Um Details der Aufgabe zu verstehen, wurde das notwendige
-Vorwissen über Algorithmen zur globalen Beleuchtung erarbeitet. Weiter wurde
-die Grundlage dieser Dokumentation erstellt.
+In der ersten Phase wurden die Zwischenziele der Arbeit identifiziert
+und skizziert. Um Einzelheiten der Aufgabe zu verstehen, wurde das notwendige
+Vorwissen über Algorithmen für globalen Beleuchtung erarbeitet. Weiter
+wurde die Grundlage dieser Dokumentation erstellt.
 
 \subsubsection{Anforderungen}
 \label{ssubsec:requirements}
 
-In dieser Phase wurde das Ziel dieser Projektarbeit festgelegt. Vom Ziel
-ausgehend wurden die dazu erforderlichen Projektphasen festgelegt.
+In dieser Phase wurde das Ziel dieser Projektarbeit festgelegt.
+Ausgehend vom Ziel wurden die dazu erforderlichen Projektphasen
+festgelegt.
 
 \subsubsection{Erarbeitung theoretische Grundlagen}
 \label{ssubsec:theoretical_background}
 
-In dieser Phase ging es darum, sich in die Materie einzulesen und sich
-diese anzueignen. Das Lesen und Bearbeiten von Publikationen führte zu
-vielen neuen Denkanstössen und immer wieder zu neuen Recherchen. Die
-Erkenntnisse dieser Phase flossen so stetig in die Dokumentation ein,
+Diese Phase bedeutete Publikationen zu lesen und durch zuarbeiten, was 
+immer zu vielen neuen Denkanstössen weiteren Recherchen führte. Die
+Erkenntnisse dieser Phase flossen stetig in die Dokumentation ein,
 ergänzten und beeinflussten diese.
 
 \subsubsection{Dokumentation}
@@ -104,7 +104,9 @@ fertiggestellten Teilen.
 \subsection{Tools und Software}
 \label{subsec:tools_software}
 
-\noindent\emph{Dokumentation und Prototyp}
+\subsubsection{Dokumentation und Prototyp}
+\label{ssubsec:tools_software:documentation_prototype}
+
 \begin{description}
     \item[\LaTeX] Eine Makro-Sammlung für das \TeX-System. Wurde zur
         Erstellung dieser Dokumentation eingesetzt. Diese Dokumentation
@@ -116,7 +118,7 @@ fertiggestellten Teilen.
         zum Sammeln, Verwalten und Zitieren unterschiedlicher Online-
         und Offline-Quellen~\parencite{wikipedia_foundation_zotero_2015}.
     \item[VIM] Vi IMproved. Ein freier, quelloffener Texteditor zur
-        Textbearbeitung. Wurde zum Verfassen der Dokumentation sowie zur
+        Textbearbeitung. Er wurde zum Verfassen der Dokumentation sowie zur
         Entwicklung des Prototypen eingesetzt.
     \item[LLVM] Low Level Virtual Machine. Eine Compiler-Architektur zum
         Kompilieren von Applikationen. Wurde zur Kompilation des
@@ -126,7 +128,9 @@ fertiggestellten Teilen.
 \end{description}
 
 
-\noindent\emph{Arbeitsorganisation}
+\subsubsection{Arbeitsorganisation}
+\label{ssubsec:tools_software:job_organisation}
+
 \begin{description}
     \item[Git] Freie Software zur verteilten Versionsverwaltung, wurde
         für die Entwicklung dieser Dokumentation sowie des Prototypen verwendet. Die
@@ -150,14 +154,14 @@ den offiziellen Richtlinien für C++ von Google~\footnote{
     }
 }.
 
-\subsubsection{Pseudecode}
+\subsubsection{Pseudocode}
 \label{ssubsec:standards_guidelines:psuedocode}
 
-Da der Autor dieser Arbeit bedingt durch seine tägliche Arbeit mit der
-Programmiersprache \textit{Python} relativ bewandert ist, wird daher diese als
-Sprache zur Beschreibung von Pseudocode verwendet.  Dabei wird aber kein
-Augenmerk auf die formale Korrektheit, geschweige denn der Lauffähigkeit
-des Pseudocodes gelegt.
+Da der Autor, bedingt durch seine tägliche Arbeit, in der
+Programmiersprache \textit{Python} relativ bewandert ist, wird diese als
+Sprache zur Beschreibung von Pseudocode verwendet.  Dabei wird kein
+Augenmerk auf die formale Korrektheit, geschweige denn auf die
+Lauffähigkeit des Pseudocodes gelegt.
 
 \subsubsection{Projekt-Struktur}
 \label{ssubsec:standards_guidelines:project_structure}
