--- a/doc/inc/50_theoretical_background.tex
+++ b/doc/inc/50_theoretical_background.tex
@@ -1,19 +1,21 @@
 % -*- coding: UTF-8 -*-
 % vim: autoindent expandtab tabstop=4 sw=4 sts=4 filetype=tex
+% vim: spelllang=de spell
 % chktex-file 27 - disable warning about missing include files
 
 \chapter{Theoretischer Hintergrund}
 \label{chap:theoretical_background}
 
-Sofern nicht anders vermerkt, basiert das folgende Kapitel
+Sofern im Text nicht anders vermerkt, basiert das folgende Kapitel
 auf~\cite[S. 721ff]{foley_computer_1996}.
 
-Um überhaupt Bilder generieren und darstellen zu können, braucht es zwei
-Faktoren: Was dargestellt werden soll und wie es dargestellt werden soll.
-Prinzipiell geht es darum zu bestimmen, welche Farbe eine Oberfläche an einem
-bestimmten Punkt hat. Dabei haben sich die Begriffe des
-\textit{Beleuchtungsmodelles (illumination model)} und des \textit{Modelles zur Schattierung
-(shading model)} etabliert.
+Für die Erzeugung und Darstellung von Bildern werden zwei Angaben
+benötigt: Was dargestellt werden soll und wie dieses dargestellt werden
+soll.
+Prinzipiell geht es darum zu bestimmen, welche Farbe eine Oberfläche an
+einem bestimmten Punkt hat. Dabei haben sich die Begriffe des
+\textit{Beleuchtungsmodelles (illumination model)} und des
+\textit{Modelles zur Schattierung (shading model)} etabliert.
 
 \citeauthor{foley_computer_1996} nutzt den Begriff \textit{shading model} als
 Überbegriff, welcher auch Beleuchtungsmodelle umfasst. Daher definiert ein
