--- a/doc/inc/static/versions.tex
+++ b/doc/inc/static/versions.tex
@@ -17,20 +17,21 @@
     }
     \vhEntry{0.3}{29.09.2015}{SO}{Einführen von Meeting
         Minutes~\ref{chap:10_meeting_minutes}, Erweitern des
-        Kapitels~\ref{chap:theoretical_background} um Belechtungsmodelle, Beschreiben von
+        Kapitels~\ref{chap:theoretical_background} um Beleuchtungsmodelle, Beschreiben von
         lokalen Beleuchtungsmodellen
     }
     \vhEntry{0.4}{04.10.2015}{SO}{Hinzufügen von Standards und
         Richtlinien~\ref{subsec:standards_guidelines}, Erweitern des
         Kapitels~\ref{chap:theoretical_background} um globale
-        Belechtungsmodelle~\ref{subsec:global_illumination_models} sowie Ray
+        Beleuchtungsmodelle~\ref{subsec:global_illumination_models} sowie Ray
         Casting~\ref{subsec:ray_casting}, Entfernen der Schriftart `cmbright', Hinzufügen
         des Kapitels über (implizite) Oberflächen~\ref{sec:surfaces}
     }
     \vhEntry{0.5}{11.10.2015}{SO}{Neuordnung des
-        Kapitels~\ref{chap:theoretical_background}: Hinzufügen des Kapitels über Ray
-        Tracing~\ref{sec:ray_casting_tracing} sowie über Darstellung von impliziten
-        Oberflächen~\ref{sec:description_implicit_surfaces}
+        Kapitels~\ref{chap:theoretical_background}: Hinzufügen
+        des~\autoref{sec:ray_casting_tracing} über Ray Tracing
+        sowie~\autoref{sec:description_implicit_surfaces} über
+        Darstellung von impliziten Oberflächen.
     }
     \vhEntry{0.6}{14.10.2015}{SO}{Hinzufügen von TODO-Notizen, Anpassung der
         Textdarstellung in Formeln
@@ -46,9 +47,9 @@
     \vhEntry{0.9}{19.10.2015}{SO}{Beginn Kapitel über Rendering von impliziten
         Oberflächen~\ref{sec:rendering_implicit_surfaces}
     }
-    \vhEntry{0.10}{21.10.2015}{SO}{Erweiterung Kapitel über Rendering von
-        impliziten Oberflächen, Einführung Kapitel über die Umsetzung eines
-        Prototypen~\ref{chap:prototype}
+    \vhEntry{0.10}{21.10.2015}{SO}{Erweiterung Kapitel über Rendering
+        von impliziten Oberflächen, Einführung
+        des~\autoref{chap:prototype} über die Umsetzung eines Prototypen
     }
     \vhEntry{0.11}{24.10.2015}{SO}{Umstrukturierung des Dokumentes, Anpassung
         der Dokumentvorlage, Nachführen der Versionshistorie, Ausführen der
@@ -87,7 +88,7 @@
     \vhEntry{0.19}{28.12.2015}{SO}{Erweiterung des Kapitels über Modelle
         zur Schattierung~\ref{sec:shading} um diverse Illustrationen,
         Hinzufügen eines (bildlichen) Vergleiches der verschiedenen
-        Modelle zur Schattierung, Abarbeiten von TODO-Noitzen,
+        Modelle zur Schattierung, Abarbeiten von TODO-Notizen,
         Hinzufügen eines Beispieles zur parametrischen Darstellung einer
         Kugel in Kapitel~\ref{sec:surfaces}, Korrektur diverser
         Rechtschreibefehler in
@@ -124,14 +125,14 @@
     \vhEntry{0.24}{09.01.2016}{SO}{Einleitung der
         Projektarbeit~\ref{chap:10_introduction} überarbeitet, Korrektur
         der Beschreibung und Referenz von impliziten Oberflächen in
-        Kpaitel~\ref{subsec:implicit_surfaces}, Erarbeiten des
+        Kapitel~\ref{subsec:implicit_surfaces}, Erarbeiten des
         Fazits~\ref{chap:discussion_and_conclusion}, Beschreibung der
         Aufgabenstellung~\ref{chap:scope}.
     }
     \vhEntry{0.25}{10.01.2016}{SO}{Fertigstellung der
-        Kapitel~\ref{chap:scope}~\nameref{chap:scope}
-        und~\ref{chap:procedure}~\nameref{chap:procedure}, Abarbeiten
-        und Nachführen von verbleibenden TODO-Noitzen, Nachführen der
+        \autoref{chap:scope}~\nameref{chap:scope}
+        und~\autoref{chap:procedure}~\nameref{chap:procedure}, Abarbeiten
+        und Nachführen von verbleibenden TODO-Notizen, Nachführen der
         Versionshistorie.
     }
     \vhEntry{0.90}{11.01.2016}{SO}{Überarbeitung der Dokumentation bis
