--- a/doc/inc/static/abstract.tex
+++ b/doc/inc/static/abstract.tex
@@ -5,10 +5,10 @@
 \chapter*{Abstract}
 \label{chap:abstract}
 
-Das Fachgebiet der Computergrafik hat seit jeher das Bestreben eine
-möglichst realistische Darstellung von Szenen und Modellen zu erzeugen.
-Eine Darstellung also, welche möglichst nahe an der Realität respektive
-der menschlichen Wahrnehmung liegt.
+Das Fachgebiet ``Computergrafik'' war schon immer bestrebt eine
+möglichst realitätsnahe Darstellung von Szenen und Modellen zu erzeugen.
+Eine Darstellung, welche möglichst nahe an der Realität respektive der
+menschlichen Wahrnehmung liegt.
 
 Im Laufe der Zeit entstanden verschiedene Ansätze um eine solche
 Darstellung zu erreichen. Ein Teilgebiet davon sind Beleuchtungsmodelle,
@@ -18,23 +18,20 @@ Ein relativ realistisch wirkendes Beleuchtungsmodell ist Ray Tracing (zu
 Deutsch Strahlen-Verfolgung), welches auf den physikalischen Grundlagen
 von Licht und Materialien von Oberflächen basiert.
 
-Möchte man jedoch mit auf Strahlen-Verfolgung basierenden Verfahren eine
-Darstellung in Echtzeit erreichen, so waren diese Verfahren lange Zeit
-zu langsam. Im Rahmen der Weiterentwicklung der Computer und vor allem
-durch die Weiterentwicklung der Grafikkarten (GPUs), ist Ray Tracing
-jedoch wieder in den Fokus der Darstellung von Szenen in Echtzeit
-gerückt.
+Diese Verfahren waren lange Zeit zu langsam um damit eine Darstellung zu
+erreichen. Durch die Weiterentwicklung der Computer, vor allem der
+Grafikkarten (GPUs), ist Ray Tracing jedoch für die Darstellung von
+Szenen in Echtzeit wieder interessant geworden.
 
 Diese Projektarbeit stellt die (theoretischen) Grundlagen zur Erzeugung
 und Darstellung von Szenen und Modellen sowie ein spezielles Ray Tracing
-Verfahren zur Darstellung von Bildern in Echtzeit vor. Es handelt sich
-dabei um \textit{Volume Ray Casting} bzw.~\textit{Sphere Tracing}.
+Verfahren zur Darstellung von Bildern in Echtzeit vor. Dabei handelt es
+sich um \textit{Volume Ray Casting} bzw.~\textit{Sphere Tracing}.
 
 Um die Hypothese zu stützen, dass die komplexen, realistischer wirkenden
 Verfahren wieder in den Fokus der Darstellung von Szenen in Echtzeit
 gerückt sind, wurde ein Prototyp entwickelt, der Sphere Tracing in
 Echtzeit auf der Grafikkarte (GPU) umsetzt.
 
-Es konnte gezeigt werden, dass mit dem vorgestellten Verfahren mittels
-moderner Grafikkarten eine Darstellung von Szenen und Modellen in
-Echtzeit erreicht werden kann.
+Mit dem vorgestellten Verfahren gelingt mittels moderner Grafikkarten
+eine Darstellung von Szenen und Modellen in Echtzeit.
